<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.sign.signUp.SignUpState1"
        android:background="@color/black">

        <TextView
            android:id="@+id/createAccount"
            android:layout_width="match_parent"
            android:layout_height="135dp"
            android:layout_gravity="center"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/circularblack"
            android:lineSpacingExtra="9dp"
            android:lineSpacingMultiplier="1.1"
            android:orientation="vertical"
            android:text="Créez votre compte Trap !"
            android:textColor="#FFFFFF"
            android:textSize="49sp"
            app:autoSizeTextType="uniform"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.05"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="20dp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.44">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/usernameParent"
                style="@style/input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/usernamelogin"
                android:inputType="textEmailAddress"
                app:layout_constraintBottom_toTopOf="@+id/emailParent"
                app:layout_constraintTop_toTopOf="parent"
                app:prefixText="\@"
                tools:layout_editor_absoluteX="0dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/usernameSignUp"
                    style="@style/inputtext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text|textEmailAddress"
                    android:text="" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailParent"
                style="@style/input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                app:endIconTint="@android:color/white"
                app:layout_constraintBottom_toTopOf="@+id/en_appuyant"
                app:layout_constraintTop_toBottomOf="@+id/usernameParent"
                tools:layout_editor_absoluteX="0dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    style="@style/inputtext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:text="" />
            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:id="@+id/en_appuyant"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/en_appuyant"
                android:textColor="@color/whiteindark"
                android:textSize="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/emailParent"
                tools:layout_editor_absoluteX="0dp" />


        </androidx.constraintlayout.widget.ConstraintLayout>


        <Button
            android:id="@+id/btn_signUp1"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/blackindark"
            android:layout_marginStart="100dp"
            android:layout_marginEnd="100dp"
            android:background="@drawable/button_rounded"
            android:backgroundTint="#FFFFFF"
            android:fontFamily="@font/circularbook"
            android:foregroundTint="#FFFFFF"
            android:text="@string/signup1"
            android:textAllCaps="false"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout2"
            app:layout_constraintVertical_bias="0.04000002" />

        <Button
            android:id="@+id/btn_gologin"
            style="@android:style/Widget.Material.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/circularbook"
            android:text="@string/dejaUnCompte"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.97" />

    </androidx.constraintlayout.widget.ConstraintLayout>